--- a/style.css
+++ b/style.css
@@ -213,7 +213,6 @@ img {
   transition: 0.5s;
   border-bottom: 2px solid rgb(255, 255, 255, 0);
   cursor: pointer;
-  color: #57b3fe;
 }
 
 .navbar_items__link:hover {
@@ -350,6 +349,10 @@ img {
 
   .hero__burger_lines_check:checked ~ .hero__burger_lines .hero__burger_line {
     background-color: #57b3fe;
+  }
+
+  .navbar_items__link {
+    color: #57b3fe;
   }
 }
 
