Added padding to container

--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ img {
 }
 
 .container {
-  max-width: 1170px;
+  max-width: 1230px;
+  padding: 0 30px;
   margin: 0 auto;
   height: fit-content;
 }
